[gd_scene load_steps=6 format=3 uid="uid://c68k4p27ox5u2"]

[ext_resource type="Script" path="res://scenes/gun/gun.gd" id="1_4keam"]
[ext_resource type="Texture2D" uid="uid://1hjng75rmxpm" path="res://assets/square.png" id="2_g2ogx"]
[ext_resource type="PackedScene" uid="uid://d2csw2s18rwv3" path="res://scenes/components/spawner/spawner_component.tscn" id="3_0lech"]
[ext_resource type="PackedScene" uid="uid://be1g0vap5etwr" path="res://scenes/bullet/bullet.tscn" id="4_5uq51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5l7fv"]
size = Vector2(4, 4)

[node name="Gun" type="Area2D"]
script = ExtResource("1_4keam")
fire_rate = 2.0
reload_time = 3.0
recoil_force = 75.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.760784, 0.760784, 0.819608, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_g2ogx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5l7fv")

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-6, 0)

[node name="Fire Cooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="Reload" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SpawnerComponent" parent="." instance=ExtResource("3_0lech")]
scene = ExtResource("4_5uq51")

[connection signal="timeout" from="Fire Cooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
